Fix alignment bug with highlight checkbox and radio.

--- a/less/checkbox-no-js.less
+++ b/less/checkbox-no-js.less
@@ -32,3 +32,14 @@
 	}
 }
 
+.checkbox {
+
+	&.highlight {
+		input:not(.sr-only) {
+			& ~ label {
+				left: -4px;
+			}
+		}
+	}
+
+}
