--- a/less/forms.less
+++ b/less/forms.less
@@ -5,13 +5,13 @@
 }
 
 .radio, .checkbox {
-	// This handy trick allows us to make rules for .radio, .checkbox, .radio-inline, and, .checkbox-inline all at once.
 	&-inline {
 		padding-left: 0;
 		&.highlight {
-			left: -8px;
+			// left: -8px;
 		}
 	}
+	// This handy trick allows us to make rules for .radio, .checkbox, .radio-inline, and, .checkbox-inline all at once.
 	&, &-inline {
 
 		// Sometimes the wrapping containter is a div with .checkbox or .radio, and has a label within it.
@@ -129,11 +129,26 @@
 	}
 
 
+	&.highlight {
+		input:not(.sr-only) {
+			& ~ label {
+				left: -8px;
+				position: relative;
+			}
+		}
+	}
+
+
 	&-inline {
+		padding-left: 0;
+		&.highlight {
+			// left: -8px;
+		}
 		&:before {
 			left: 0;
 			top: 3px;
 		}
 	}
+
 
 }
